--- a/go-deployment.yaml
+++ b/go-deployment.yaml
@@ -18,3 +18,10 @@ spec:
           imagePullPolicy: IfNotPresent 
           ports:
             - containerPort: 8080
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "250m"
+            limits:
+              memory: "128Mi"
+              cpu: "500m"
