--- a/mysql-deployment.yaml
+++ b/mysql-deployment.yaml
@@ -4,6 +4,11 @@ metadata:
   name: mysql-deployment
 spec:
   replicas: 2
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 2
+      maxSurge: 1
   selector:
     matchLabels:
       app: mysql-deployment
